DARK MODE FIXES

--- a/src/Components/AllSystems/AllSystems.css
+++ b/src/Components/AllSystems/AllSystems.css
@@ -326,3 +326,6 @@
     fill: #fff !important;
 }
 
+.allSystems.dark-mode .flash {
+    animation: flash-white 1s;
+}
