--- a/src/Components/SystemSettings/SystemSettings.css
+++ b/src/Components/SystemSettings/SystemSettings.css
@@ -400,3 +400,6 @@
     color: #ffffff;
 }
 
+.systemControl.dark-mode .flash-animation {
+    animation: flash-white 1s;
+}
